// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon #className 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="icon icon-test u-test"
  >
    <use
      href="#icon-test"
    />
  </svg>
</span>
`;

exports[`Icon #name 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="icon icon-test "
  >
    <use
      href="#icon-test"
    />
  </svg>
</span>
`;

exports[`Icon #title 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="icon icon-test "
  >
    <use
      href="#icon-test"
    />
  </svg>
  <span
    className="visuallyhidden"
  >
    Test title
  </span>
</span>
`;
